@@ -5,6 +5,7 @@
  - The table name in `stream_from` is now escaped.
  - You can now "convert" strings to `std::string_view`.  Mind your lifetimes!
  - If a `stream_from` row fails to convert, you can no longer retry it.
+ - `from_string(field const &)` now handles null values properly.
  - Obsolete Windows build docs are gone.
 7.0.5
  - Compile fix for g++ 10: include `<limits>` (#292).
